<resources>
    <string name="app_name">Which Serial Next?</string>
    <string name="action_settings">Settings</string>
    <string name="hinzuf_gen">Neue Serie erstellen</string>
    <string name="f_ge_eine_neue_serie_hinzu">Füge eine neue Serie hinzu</string>
    <string name="serienbezeichnung">Serienbezeichnung:</string>
    <string name="staffel">Staffel:</string>
    <string name="episode">Episode:</string>
    <string name="neue_serie_erstellen">Neue Serie erstellen</string>
    <string name="erstelle_neue_serie">Erstelle neue Serie</string>
    <string name="loeschen">Löschen</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="plus">+</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="minus">-</string>
</resources>
