<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Serie_Bezeichnung"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/Staffel_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Serie_Bezeichnung" />

    <TextView
        android:id="@+id/Staffel_Zahl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/Staffel_Text"
        tools:layout_editor_absoluteY="70dp" />

    <TextView
        android:id="@+id/Episode_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Staffel_Text" />

    <TextView
        android:id="@+id/Episode_Zahl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/Episode_Text"
        app:layout_constraintTop_toBottomOf="@+id/Staffel_Zahl" />

    <Button
        android:id="@+id/Staffel_Plus"
        android:layout_width="40"
        android:layout_height="40"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/Staffel_Zahl"
        app:layout_constraintTop_toBottomOf="@+id/Serie_Bezeichnung" />

    <Button
        android:id="@+id/Episode_Plus"
        android:layout_width="40"
        android:layout_height="40"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/Episode_Zahl"
        app:layout_constraintTop_toBottomOf="@+id/Staffel_Plus" />

    <Button
        android:id="@+id/Staffel_Minus"
        android:layout_width="40"
        android:layout_height="40"
        android:layout_marginStart="8dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/Staffel_Plus"
        tools:layout_editor_absoluteY="70dp" />

    <Button
        android:id="@+id/Episode_Minus"
        android:layout_width="40"
        android:layout_height="40"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/Episode_Plus"
        app:layout_constraintTop_toBottomOf="@+id/Staffel_Minus" />
</android.support.constraint.ConstraintLayout>